# voidgif

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export_demo.rs  make_flip_test.rs  make_test_project.rs  wave1_demo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: editor.rs  export.rs  frameserver.rs  gif_import.rs  lib.rs  main.rs  project.rs  recorder.rs  session.rs  settings.rs  share.rs  state.rs
src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
src-tauri/tests/: pipeline.rs
src/components/: ContinueRecordButton.tsx  ExportDialog.tsx  Filmstrip.tsx  LoopButton.tsx  ResizeDialog.tsx  SaveProjectButton.tsx  SettingsDialog.tsx  SpeedButton.tsx  ToolbarButton.tsx  icons.tsx  pickers.tsx
src/i18n/: en.ts  index.ts  ja.ts  ko.ts
src/lib/: ipc.ts  lastDir.ts  saveFlow.ts  theme.ts
src/stores/: appStore.ts  settingsStore.ts
src/views/: Editor.tsx  Home.tsx  Onboarding.tsx  RecorderPanel.tsx
store/: README-submission.md  privacy-policy.md
store/listing/: en.md  ja.md  ko.md
store/msix/: .gitignore  AppxManifest.xml  build-msix.ps1
store/screenshots/: README.md  capture-cdp.ps1  capture-screenshots.ps1  cdp-eval.mjs
